Picture saving and temporary link getting